# mini-llm-engine

./: .gitignore  LICENSE  README.md  REVIEW_AND_FIX_REPORT.md  ai_infra_learning_plan.md  benchmark.csv  note.md  pyproject.toml
cuda-kernels/: CMakeLists.txt  benchmark.csv
cuda-kernels/gemm/: CMakeLists.txt  gemm.cu
cuda-kernels/reduction/: CMakeLists.txt  reduction.cu
cuda-kernels/rmsnorm/: CMakeLists.txt  rmsnorm.cu
cuda-kernels/softmax/: CMakeLists.txt  softmax.cu
cuda-kernels/tests/: README.md  test_correctness.py
cuda-kernels/transpose/: CMakeLists.txt  transpose.cu
cuda-kernels/vector_add/: CMakeLists.txt  vector_add.cu
docs/: OWNERSHIP.md  application_tracker.md  interview_qa.md  interview_script.md  sysy_summary.md  week1.md  week2.md  week3_llamacpp_notes.md  week3_transformer_notes.md  week4_7.md  xv6_summary.md
mini-llm-engine/: CMakeLists.txt
mini-llm-engine/benchmarks/: CMakeLists.txt  run_benchmark.sh  run_llamacpp_baseline.sh
mini-llm-engine/docs/: OWNERSHIP.md  TODO_W7_GPU.md  week5.md  week6.md  week7.md  week8.md
mini-llm-engine/scripts/: dump_weights.py
mini-llm-engine/src/: kv_cache.cpp  kv_cache.h  main.cpp  model.cpp  model.h  ops_cpu.cpp  ops_cpu.h  ops_cuda.cu  ops_cuda.h  sampler.cpp  sampler.h  tensor.cpp  tensor.h
mini-llm-engine/tests/: CMakeLists.txt  test_flash_attn.py  test_gpu_cpu_match.py
w3_prototype/: benchmark_baseline.py  inference.py  kv_cache.py  model.py  sampler.py
